# infralink

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  rustfmt.toml  shell.nix
.github/workflows/: rust-clippy.yml  rust.yml
gen-dummy-data/: README.md  data.json  main  main.go
health-check/: Cargo.toml
health-check/src/: db.rs  health_check.rs  main.rs
models/: Cargo.toml
models/src/models/: build.rs  cloud_provider.rs  deployment.rs  health_check.rs  instance.rs  instance_state.rs  metrics.rs  region.rs  volume.rs  worker.rs
nix/: builder.nix  ping.nix  registry.nix  runner.nix  worker.nix
principal/: Cargo.toml  Dockerfile  docker-compose.yml
principal/prometheus/: prometheus.yml
principal/rabbitmq/: rabbitmq.conf
principal/src/: lib.rs  main.rs  shared_config.rs
principal/src/api/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  server.rs
principal/src/api/handlers/: api.rs  autoscaling.rs  configmaps.rs  deployments.rs  docs.rs  events.rs  health.rs  ingress.rs  metrics.rs  namespaces.rs  nodes.rs  pods.rs  secrets.rs  services.rs  volumes.rs  watch.rs
principal/src/data/: dummy_data.json
principal/src/examples/: autoscaling_example.rs  docker_example.rs  ingress_example.rs  mod.rs  storage_example.rs
principal/src/models/: cloud_provider.rs  health_check.rs  mod.rs  network.rs  region.rs  worker.rs
principal/src/providers/: mod.rs
principal/src/providers/fly/models/request/: app.rs  machine.rs  mod.rs  volume.rs
principal/src/providers/hetzner/models/request/: instance.rs  mod.rs  region.rs
principal/src/providers/local/: docker_client.rs  mod.rs
principal/src/providers/local/models/request/: container.rs  mod.rs  network.rs  volume.rs
principal/src/providers/vultr/models/request/: bandwidth.rs  instance.rs  mod.rs  plan.rs  region.rs
principal/src/scale/: mod.rs  scale.rs
principal/src/services/: autoscaler.rs  config.rs  discovery.rs  health.rs  ingress.rs  load_balancer.rs  metrics.rs  mod.rs  proxy.rs  storage.rs  volume_scheduler.rs
principal/src/stats/: stats.rs
rabbitmq/: rabbitmq.config
scripts/: clickhouse_connect.sh
services/builder/: Cargo.toml
services/builder/src/: main.rs
services/builder/src/db/: db.rs
services/builder/src/logs/: logs.rs
services/builder/src/webhook/: webhook.rs
services/health-check/: Cargo.toml  Dockerfile  build.rs
services/health-check/proto/: worker_info.proto
services/health-check/src/: db.rs  health_check.rs  main.rs  worker_info.rs
services/load-balancer/: Cargo.toml
services/load-balancer/src/: db.rs  main.rs  utils.rs
services/ping-server/: Cargo.toml
services/ping-server/src/: db.rs  main.rs
services/registry/: Cargo.toml  Dockerfile
services/registry/src/: main.rs
services/runner/: Cargo.toml
services/runner/src/: main.rs
services/runner/src/docker/: docker.rs  utils.rs
worker/: Cargo.toml  Dockerfile  build.rs
worker/proto/: compute.proto  helloworld.proto  memory.proto  network.proto  storage.proto
worker/proto/container/: container.proto  stats.proto
worker/proto/network/: network.proto
worker/src/: bookstore.rs  compute.rs  container_service.rs  docker.rs  helloworld.rs  lib.rs  main.rs  memory.rs  mod.rs  network.rs  podman.rs  stats.rs  storage.rs
worker/src/container/: create.rs  delete.rs  logic.rs  mod.rs  stats.rs
worker/src/data/: compute.rs  mem.rs  mod.rs  network.rs  storage.rs
worker/src/models/metadata/: compute.rs  memory.rs  mod.rs  network.rs  storage.rs
