[workspace]
members = [
  "principal",    # Codebase for principal / master nodes
  "worker",       # Codebase for worker nodes
  "health-check", # Codebase for health check
  "models", # Models used for network, cloud providers, metrics etc.
]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Disable parallel codegen.
