[workspace]
members = [
  "principal",              # Codebase for principal / master nodes
  "worker",                 # Codebase for worker nodes
  "models",                 # Models used for network, cloud providers, metrics etc.
  "services/health-check",  # Codebase for health check
  "services/ping-server",   # Ping server
  "services/registry",  # Pushes/Pulls images to our registry
  "services/builder" ,   # Builds via nixpacks
  "services/runner" # Runner service
]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Disable parallel codegen.
