[package]
name = "health-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.16", features = ["rustls-tls", "json"] }
tracing = "0.1.37"
chrono = "0.4.24"
dotenv = "0.15.0"
redis = { version = "0.23.0", features = [
  "tokio-comp",
  "r2d2",
  "cluster-async",
] }
dotenv_codegen = "0.15.0"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = [
  "v4",       # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
