[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.96"
uuid = "1.3.3"