[package]
name = "principal"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["rustls-tls", "json"] }
dotenv_codegen = "0.15.0"
serde_json = "1.0.93"
tokio = "1.28.0"
tonic = "0.9.2"
lapin = "2.1.1"
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
chrono = "0.4.24"
