[package]
name = "principal"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker = { path = "../worker" }
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["rustls-tls", "json", "blocking"] }
dotenv_codegen = "0.15.0"
serde_json = "1.0.93"
tokio = { version = "1.28.0", features = ["fs"] }
lapin = "2.1.1"
tracing = "0.1.37"
tokio-stream = "0.1.14"
tracing-subscriber = "0.3.17"
chrono = "0.4.24"
rand = "0.8.5"
futures-util = "0.3.28"
anyhow = "1.0.71"
juniper =  "0.15.11"
juniper_hyper = "0.8.0"
hyper = "0.14"
redis = { version = "0.23.0", features = [
  "tokio-comp",
  "r2d2",
  "cluster-async",
] }
juniper_codegen = "0.15.9"
uuid = { version = "1.3.3", features = ["v4"] }
base64 = "0.21.2"
thiserror = "1.0.40"
lazy_static = "1.4.0"
bollard = "0.14.0"
