[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.8"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.6.0"
tonic-build = "0.8.4"
podman-api = "0.10.0"
reqwest = "0.11.16"

[build-dependencies]
tonic-build = "0.8.4"
