[package]
name = "worker"
version = "0.1.0"
build = "build.rs"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.8"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.6.0"
tonic-build = "0.8.4"
reqwest = "0.11.16"
etherparse = "0.13.0"
podman-api = "0.10.0"
futures-util = "0.3.28"
time = { workspace = true }
bollard = "0.14.0"
uuid = { version = "1.3.3", features = ["v4"] }
chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.8.5"
num_cpus = "1.15.0"

[build-dependencies]
tonic-build = "0.8.4"
