[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../../models" }
chrono = "0.4.24"
tokio = "1.28.1"
hyper = "0.14.26"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.96"
uuid = "1.3.3"
dotenv = "0.15.0"
prometheus = "0.13.3"
nixpacks = "1.9.0"