[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } 
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features=["full"] }
models = { path = "../../models" }
chrono = "0.4.24"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = "1.3.3"
dotenv = "0.15.0"
prometheus = "0.13.3"
nixpacks = "1.9.0"
futures = "0.3.28"
dotenv_codegen = "0.15.0"
tokio-postgres = "0.7.8"
shiplift = "0.7.0"