[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features=["full"] }
reqwest = { version = "0.11", features = ["json"] } 
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
shiplift = "0.7.0"
futures = "0.3.28"
warp = "0.3.5"
colored = "2.0.0"